--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,15 @@ node_modules
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+.expo/*
+*.jks
+*.p8
+*.p12
+*.key
+*.mobileprovision
+*.orig.*
+web-build/
+
+# macOS
+.DS_Store
